--- a/Arcface_Masked_face_recognition.ipynb
+++ b/Arcface_Masked_face_recognition.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "qPjyozbGfxEK"
       ],
-      "authorship_tag": "ABX9TyMBqO0wiloZwYEBwiXxNIVr",
+      "authorship_tag": "ABX9TyOo1BS0HKOp5LUZ22Fwdhpg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#ResNet34- Face recognition [deepface](https://github.com/serengil/deepface)"
+        "#ResNet34- Face recognition "
       ],
       "metadata": {
         "id": "GoZh7QxIVaPT"
