--- a/Arcface_Masked_face_recognition.ipynb
+++ b/Arcface_Masked_face_recognition.ipynb
@@ -821,7 +821,8 @@
         "    if dist >= 0 and dist < 0.35: print(\"Same person\")\n",
         "    elif dist >= 0.35 and dist < 0.7: print(\"Must use LBP to verify this pair\")\n",
         "    else: print(\"not the same person\")\n",
-        "    return dist\n"
+        "    return dist\n",
+        " "
       ]
     },
     {
