--- a/facial_extract_with_dlib.ipynb
+++ b/facial_extract_with_dlib.ipynb
@@ -200,7 +200,7 @@
         "\n",
         "  # showing image\n",
         "  plt.imshow(img1)\n",
-        "  plt.axis('off')\n",
+        "  plt.axis('image 1')\n",
         "  plt.title(name1)\n",
         "    \n",
         "  # Adds a subplot at the 2nd position\n",
