--- a/facial_extract_with_dlib.ipynb
+++ b/facial_extract_with_dlib.ipynb
@@ -208,7 +208,7 @@
         "    \n",
         "  # showing image\n",
         "  plt.imshow(img2)\n",
-        "  plt.axis('i')\n",
+        "  plt.axis('imag2')\n",
         "  plt.title(name2)"
       ]
     },
